Fix misalignment in tag list

--- a/frontend/src/components/TagListsTitleBar/TagListsTitleBar.module.css
+++ b/frontend/src/components/TagListsTitleBar/TagListsTitleBar.module.css
@@ -15,6 +15,6 @@
     width: 28px;
 }
 
-.button1 {
-    margin-right: -1px;
+.button2 {
+    margin-left: -1px;
 }
